hopefully fixes alignment

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ html, body {
 }
 
 #canvas {
+  display: flex;
   flex: 1;
   justify-content: center;
   align-items: center;
